# thor-project

./: .env  .gitignore  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  nginx-dotnet.conf  nginx.conf  pyproject.toml  run_benchmark.sh  simulate_traffic.py
app/core/: settings.py  urls.py
app/transaction/: tests.py
app/transaction/migrations/: 0001_initial.py  0002_initial.py
app/user/: models.py  urls.py  views.py
app/user/migrations/: 0001_initial.py
app/wallet/: services.py  urls.py  views.py
app/wallet/migrations/: 0001_initial.py
dotnet-api/: Dockerfile  DotnetApi.csproj  DotnetApi.http  Program.cs
dotnet-api/Controllers/: AdminController.cs  AuthController.cs  BaseController.cs  HealthController.cs  TransactionController.cs  WalletController.cs
dotnet-api/DTOs/: AuthDTOs.cs  TransactionDTOs.cs  WalletDTOs.cs
dotnet-api/Data/: AppDbContext.cs
dotnet-api/Models/: LedgerEntry.cs  Transaction.cs  User.cs  Wallet.cs
dotnet-api/Properties/: launchSettings.json
dotnet-api/Services/: TokenService.cs  WalletService.cs
frontend/: Dockerfile  index.html
frontend/src/: App.jsx  index.css
pgbouncer/: pgbouncer.ini  userlist.txt
python-api/: Dockerfile  docker-entrypoint.sh
python-api/app/core/: celery.py  settings.py
python-api/app/transaction/: admin_views.py  models.py  serializers.py  urls.py  views.py
python-api/app/user/: serializers.py  urls.py  views.py
python-api/app/wallet/: models.py  serializers.py  tasks.py
